<resources>
    <string name="app_name">anitoa</string>
    <string name="channel_select_title">请选择通道%1$s染料</string>


    <string name="predenature_stage">Pre-denature Stage</string>
    <string name="holding_stage">Holding Stage</string>
    <string name="cycling_stage">Cycling Stage</string>
    <string name="step">Step %1$s</string>
    <string name="step_first">Step1</string>
    <string name="melting_stage">Melting Stage</string>
    <array name="spinner_values">
        <item>PCR</item>
        <item>HRM</item>
    </array>analyze_select_file

    <string name="title_analyze">Analyze</string>

    <string name="channel_1_str">Channel1</string>
    <string name="channel_2_str">Channel2</string>
    <string name="channel_3_str">Channel3</string>
    <string name="channel_4_str">Channel4</string>

    <string name="channel_1">Channel 1:</string>
    <string name="channel_2">Channel 2:</string>
    <string name="channel_3">Channel 3:</string>
    <string name="channel_4">Channel 4:</string>

    <string name="device_status_bar_no_device_connected">Disconnected</string>
    <string name="device_status_bar_connected">Connected</string>
    <string name="device_status_bar_disconnected">Disconnected</string>

    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>


    <string name="title_running">Running</string>
    <string name="running_filter">Filter</string>
    <string name="running_mode_melting">Operations: HRM</string>
    <string name="running_mode_pcr">Operations: PCR</string>
    <string name="running_timer">Timer：</string>
    <string name="running_stop">Manual Stop</string>
    <string name="running_cycle">Cycle:</string>
    <string name="running_dialog_stop_msg">Please Confirm to Manually Stop the Test</string>
    <string name="running_heating">Heating</string>
    <string name="running_cooling">Cooling</string>
    <string name="running_test_finished">Test Finished</string>
    <string name="running_lid_temp">Lid Temp</string>
    <string name="running_heater_temp">Heater Temp</string>
    <string name="running_stage">Stage</string>

    <string name="test_status_finished">Finished</string>

    <string name="title_setup_1">Setup-Channels</string>
    <string name="setup_test_name">Test Name: </string>
    <string name="setup_input_test_name">Enter Test Name</string>
    <string name="setup_test_time">Date Tested</string>
    <string name="setup_selelct_test_channel">Channel</string>
    <string name="setup_next">Next</string>
    <string name="setup_dialog_channel_select_msg">Dye Selection - Channel%1$s</string>
    <string name="setup_input_desc">Optional Description Here</string>
    <string name="setup_channel">Channel</string>
    <string name="setup_channel_select_tip">Please Select Dye</string>
    <string name="setup_well_select_tip">Please Select Well</string>
    <string name="setup_int_time">IntegrationTime(ms)</string>
    <string name="setup_auto_int_time">Auto</string>

    <string name="title_setup_2">Setup-Protocol</string>
    <string name="setup_operation">Operation</string>
    <string name="setup_mode_dt">PCR</string>
    <string name="setup_mode_melting">HRM</string>
    <string name="setup_start">Start</string>
    <string name="setup_total_cycles">Cycles:</string>
    <string name="setup_pic_step">Capture Step:</string>
    <string name="dialog_pic_step">Capture Step</string>
    <string name="setup_nopic">None</string>
    <string name="setup_save_success">Save Success</string>
    <string name="setup_save_error">An Error Occurred</string>

    <string name="setup_temp_range">Temp Range</string>
    <string name="setup_start_temp">Starting Temp</string>
    <string name="setup_end_temp">Ending Temp</string>

    <string name="unstart">Unstart</string>
    <string name="start">Start</string>

    <string name="login_input_name">Enter User Name</string>
    <string name="login_input_pwd">Enter Password</string>
    <string name="login_login">Log In</string>
    <string name="login_pwd_error">Incorrect Passward, Please Try Again</string>

    <string name="login_error_tips">Incorrect Name Or Passward</string>

    <string name="title_detect">Detect</string>
    <string name="title_mine">Mine</string>
    <string name="title_data">Result</string>
    <string name="data_by">Performed By:</string>
    <string name="data_finish_time">Time Stamp:</string>
    <string name="data_finish_date">Date Stamp:</string>
    <string name="data_during_time">Total Time:</string>
    <string name="data_ct_lower">Ct Lower Limit:</string>
    <string name="data_ct_threshold">Ct Threshold(%):</string>
    <string name="data_ct_refresh">Refresh</string>
    <string name="title_pwd">Change Password</string>
    <string name="pwd_settings">Enter Password</string>
    <string name="pwd_tips">Password should contain at lest 6 letters, including at lest one letter and one number</string>
    <string name="pwd_old">Old Password</string>
    <string name="pwd_new">New Password</string>
    <string name="pwd_confirm">Retype New Password</string>
    <string name="pwd_input_error">Wrong Old Password</string>
    <string name="pwd_enter_old">Enter Old Password</string>
    <string name="pwd_enter_new">Enter New Password</string>
    <string name="pwd_enter_confirm">Enter Retype New Password</string>
    <string name="pwd_submit">submit</string>

        <string name="pwd_not_equal_pwd">The new Password is not consistant with the confirmed password</string>
    <string name="pwd_not_pwd_rule">The new password dones't meet the requirements</string>
    <string name="pwd_pwd_edit_error">Failed to change the password</string>
    <string name="pwd_pwd_edit_succ">Password has been changed successfully</string>


    <string name="title_user_settings">Settings</string>
    <string name="user_settings_dialog_msg">Confirm Log Off?</string>
    <string name="user_settings_log_off">Log Off</string>

    <string name="analyze_select_file">Select File</string>

    <string name="version_host">HOST</string>
    <string name="version_temp">TEMP</string>
    <string name="version_img">IMG</string>

    <string name="test_new">New Test</string>
    <string name="no_previous_test">No Previous Test</string>

    <string name="dialog_msg_pdf">Are you sure to export PDF</string>
    <string name="pdf_exported">Success</string>
    <string name="pdf_export_error">An Error Occurred</string>
    <string name="check_hid_connection">Please make sure the device is connected</string>

    <string name="tip_close_heating_cover">Please close the heating cover</string>
    <string name="tip_power_cord">Please connect the power cord</string>
    <string name="tip_sd_permission">SD access is required to set up a new test</string>
    <string name="tip_least_one_cycle">It should at least contain one cycle</string>

    <string name="op_del">Delete</string>
    <string name="negative">neg</string>
    <string name="standard_curve">Standard Curve</string>
    <string name="standard_point">Standard Points</string>
    <string name="unknow_point">Unknown Points</string>

    <string name="standard_sample">Sample</string>
    <string name="standard_type">Type</string>
    <string name="standard_concentration">Concentration</string>
    <string name="standard_ct">Ct</string>
    <string name="standard_draw_curve">Draw Std Curve</string>
    <string name="standard_find_unknown">Find Unknown</string>
    <string name="standard_illegal">Illegal Arguments</string>
    <string name="standard_input_concentration">Enter Concentration of Standard Points </string>
    <string name="concentration">concentration</string>

    <string name="norm">norm</string>
    <string name="print">Print</string>
    <string name="print_preview">Print Preview</string>
    <string name="print_company_name">Company Name: </string>

    <string name="print_conclusion">Conclusion</string>
    <string name="print_user">User</string>
    <string name="print_auditor">Auditor</string>
    <string name="print_unit">Unit</string>
    <string name="print_date">Date</string>

    <string name="tip_illegal_file">Illegal File</string>

    <string name="hello_world">Hello world!</string>
    <string name="exit">exit</string>
    <string name="current_version">Current Version :</string>
    <string name="version_update">Version Update</string>
    <string name="server_version">Server Version :</string>
    <string name="upadte_now">Update Now</string>
    <string name="next_time">Next Time</string>
    <string name="version_code_current">Version Code Current:</string>
    <string name="version_name_current">Version Name Current:</string>
    <string name="connecting_to_network">Connecting to network, please wait</string>
    <string name="download_progress">Download Progress </string>

</resources>
