<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_conclusion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:textSize="@dimen/print_text_size"
            android:text="@string/print_conclusion"
            android:textColor="@color/color333333" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_conclusion"
            android:minLines="5"
            android:textSize="@dimen/print_text_size"
            android:gravity="top"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_test_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_user"
                android:textSize="@dimen/print_text_size"
                android:textColor="@color/color333333" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:gravity="top"
                android:textSize="@dimen/print_text_size"
                android:textColor="@color/color333333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_check_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/print_text_size"
                android:text="@string/print_auditor"
                android:textColor="@color/color333333" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:textSize="@dimen/print_text_size"
                android:textColor="@color/color333333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_test_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_unit"
                android:textSize="@dimen/print_text_size"
                android:textColor="@color/color333333" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="10dp"
                android:textSize="@dimen/print_text_size"
                android:textColor="@color/color333333" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_report_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/print_text_size"
            android:layout_marginTop="50dp"
            android:text="@string/print_date"
            android:textColor="@color/color333333" />
    </RelativeLayout>
</LinearLayout>