<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_ct_lower"
        android:textColor="#616161"/>

    <EditText
        android:id="@+id/et_ct_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="40dp"
        android:maxLength="2"
        android:inputType="number"
        android:textColor="#616161"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/data_ct_threshold"
        android:textColor="#616161"/>

    <EditText
        android:id="@+id/et_ct_threshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="40dp"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#616161"/>


    <TextView
        android:id="@+id/btn_refresh"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:background="@color/color1F4E99"
        android:textColor="#ffffff"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:text="@string/data_ct_refresh" />
    <!--<ImageView
       android:id="@+id/btn_refresh"
       android:layout_width="24dp"
       android:layout_height="24dp"
       android:src="@drawable/icon_refresh"
       android:layout_marginLeft="20dp"/>
  <TextView
       android:id="@+id/btn_refresh"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="刷新"
       android:paddingLeft="12dp"
       android:paddingRight="12dp"
       android:paddingBottom="10dp"
       android:paddingTop="10dp"
       android:textColor="@color/white"
       android:background="@color/color333333"
       android:layout_marginLeft="16dp"
       />-->
</LinearLayout>