<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.7"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="A"
                android:textColor="@color/color333333"/>


            <GridView
                android:id="@+id/gv_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:horizontalSpacing="6dp"
                android:listSelector="@android:color/transparent"
                android:numColumns="8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="B"
                android:textColor="@color/color333333"/>

            <GridView
                android:id="@+id/gv_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:horizontalSpacing="6dp"
                android:listSelector="@android:color/transparent"
                android:numColumns="8" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_standard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="right">
                <TextView
                    android:id="@+id/tv_equation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color333333"
                    />
                <TextView
                    android:id="@+id/tv_r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color333333"
                    />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
<!--
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart_standard"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.7" />-->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/rg_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_channel_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/channel_1_str"
                />
            <RadioButton
                android:id="@+id/rb_channel_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_2_str"
                android:layout_marginLeft="10dp"/>
            <RadioButton
                android:id="@+id/rb_channel_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_3_str"
                android:layout_marginLeft="10dp"/>
            <RadioButton
                android:id="@+id/rb_channel_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_4_str"
                android:layout_marginLeft="10dp"/>

        </RadioGroup>
        <RadioGroup
            android:id="@+id/rg_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/standard_point" />

            <RadioButton
                android:id="@+id/rb_unknow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/unknow_point" />
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_draw_std"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard_draw_curve"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/shape_solid1f4e99"/>

                <ListView
                    android:id="@+id/lv_standard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_find_unknow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard_find_unknown"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/shape_solid1f4e99"/>

                <ListView
                    android:id="@+id/lv_unknow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>