<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorF5F5F5"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <com.jz.experiment.widget.DeviceStateBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.wind.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_cur_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="当前模式："
        android:textColor="@color/color333333" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingLeft="12dp">

        <LinearLayout
            android:id="@+id/ll_cycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cycling_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/running_cycle"
                android:textColor="@color/color333333" />

            <TextView
                android:id="@+id/tv_cycling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="1/40"
                android:textColor="@color/color333333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/running_timer"
                android:textColor="@color/color333333" />

            <com.jz.experiment.widget.DuringView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">



        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_dt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_melt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:visibility="gone" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_temp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_stop"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="12dp"
        android:background="@drawable/shape_solid1f4e99_corner4"
        android:gravity="center"
        android:text="@string/running_stop"
        android:textColor="@color/white" />
</LinearLayout>